# otus-highload

./: LICENSE  README.md
homework1/: Cargo.toml  Dockerfile  docker-compose.yml
homework1/src/: app.rs  controller.rs  controller_auth.rs  controller_user.rs  db.rs  db_client.rs  db_user.rs  main.rs  password.rs  schema.rs  user_controller.rs
homework1/src/schema/: user_register.json
homework2/: Cargo.toml  docker-compose.yml
homework2/src/: app.rs  controller_user.rs  db_user.rs  main.rs
homework2/src/schema/: login.json  user_register.json
homework2/tools/fill/: Cargo.toml
homework2/tools/fill/src/: lib.rs
homework2/tools/generate_inserts/: Cargo.toml
homework2/tools/generate_inserts/src/: lib.rs
