[package]
name = "secial-network"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = {version="0.3", features=["env-filter"]}
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
tokio-postgres = { version = "0.7" }
anyhow = { version = "1.0" }
clap = { version = "4.4", features = ["derive"] }
clap_builder = "4.4"
tracing = "0.1"
jsonschema = { version = "0.17" }
once_cell = "1.19"
chrono = "0.4"
argon2 = { version = "0.2.4", features = ["password-hash"] }


