[package]
name = "social-network"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "social-network"
path = "src/main.rs"
test = false
bench = false

[workspace]
members = [
    ".",
    "tools/fill",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = {version="0.3", features=["env-filter"]}
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
tokio-postgres = { version = "0.7" }
anyhow = { version = "1.0" }
clap = { version = "4.4", features = ["derive"] }
clap_builder = "4.4"
tracing = "0.1"
jsonschema = { version = "0.17" }
once_cell = "1.19"
chrono = "0.4"
argon2 = { version = "0.2.4", features = ["password-hash"] }
deadpool-postgres = { version = "0.12", features = ["serde"] }
reqwest = { version = "0.11" }

[dependencies]
fill = { path = "tools/fill" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio-postgres = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_builder = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
deadpool-postgres = { workspace = true }


